<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home</string>

    <string name="menuSetHome">Set Home</string>
    <string name="menuSelectBluetooth">Select Bluetooth</string>
    <string name="menuSelectWifi">Select Wifi</string>
    <string name="menuPreferences">Preferences</string>
    <string name="menuProximityNotify">Home Proximity Notification</string>
    <string name="prefSummaryProximityNotifyOn">Notified when you approach your home</string>
    <string name="prefSummaryProximityNotifyOff">Not notified when you approach your home.</string>
    <string name="prefProximityNotifyOn">ON</string>
    <string name="prefProximityNotifyOff">OFF</string>
    <string name="prefProximityNotify">Proximity Notification</string>
    <string name="prefSummaryProximityNotify">Whether notified when you approach your home</string>
    <string name="prefProximityDistance">Proximity Distance( m )</string>
    <string name="prefSummaryProximityDistance">The distance to home to notify</string>
    <string name="homeAt">"Home at: (%1$f, %2$f), from %3$s"</string>
    <string name="currentAt">"Now you at: (%1$f, %2$f), from %3$s"</string>
    <string name="currentAsHome">Set current location as home</string>
    <string name="saveHome">Save current location as home</string>
    <string name="searchDescription">Search location</string>
    <string name="homeAddressLabel">"Address: "</string>
    <string name="appendAddressFromSearch">Append address from search result</string>
    <string name="selectHomeAddressFromSearchResult">Append From Search:</string>
    <string name="menuLocateHome">Locate Home</string>
    <string name="menuAddressHome">Address Home</string>
    <string name="noCurrentLocation">No current location, locate first!</string>
    <string name="backToLocateHome">Back to locate home</string>
    <string name="titleLocateHome">Locate Home</string>
    <string name="toAddressHome">To Address Home</string>
    <string name="titleAddressHome">Address Home</string>
    <string name="locateCurrentTimeout">Fail to locate the current position!</string>
    <string name="toHome">Move current location to home</string>
    <string name="locatingProcess">Locating processed %1$s%%</string>
    <string name="locatingStart">Start locating!</string>
    <string name="locatingSuccess">Success to locate at ( %1$f, %2$f ) by %3$s</string>
    <string name="noLocationEnabled">Locating is no enabled. Do you want to enable it?</string>
    <string name="promptTryLocatingAgain">Try to locate after enabling location setting.</string>
    <string name="promptBluetoothEnableOk">Bluetooth is enabled successfully!</string>
    <string name="promptBluetoothEnableCanceled">Canceled to enabled bluetooth. The bluetooth cannot be used for location!</string>
    <string name="promptNoDeviceSelected">No device selected to check range of home!</string>
    <string name="beaconState">%1$s beacon at home is %2$s. Now it is %3$s.</string>
    <string name="stateBtDeviceChecking">checking</string>
    <string name="stateBtDeviceNotInRange">not in range</string>
    <string name="stateBtDeviceInRange">in range</string>
    <string name="selectBeaconAtHome">Select one device below to indicate you are at home, when it is discovered.</string>
    <string name="menuBluetoothSelectionRefresh">Refresh</string>
    <string name="stateBtDeviceNotEnabled">not enabled.</string>
    <string name="wifiConfirmEnableTitle">Enable WiFi</string>
    <string name="wifiConfirmEnableMessage">Are you sure to enable the WiFi?</string>
    
</resources>
