<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/layoutHomeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/labelHomeAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:labelFor="@+id/textViewHomeAddress"
            android:text="@string/homeAddressLabel"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/textViewHomeAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/labelHomeAddress"
            android:inputType="textPostalAddress"
            android:textAppearance="?android:attr/textAppearanceMedium" >

            <requestFocus />
        </EditText>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/homeOpertaionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutHomeAddress"
        android:orientation="horizontal" >

        <SearchView
            android:id="@+id/searchViewAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/imageViewSetHome"
            android:iconifiedByDefault="true" >

        </SearchView>

        <ImageView
            android:id="@+id/imageViewSetHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/imageViewCurrentLocation"
            android:clickable="true"
            android:contentDescription="@string/saveHome"
            android:longClickable="true"
            android:src="@drawable/ok" />

        <ImageView
            android:id="@+id/imageViewCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:contentDescription="@string/currentAsHome"
            android:longClickable="true"
            android:src="@drawable/current_as_home" />
    </RelativeLayout>

    <com.amap.api.maps2d.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapHome"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/homeOpertaionLayout" >
    </com.amap.api.maps2d.MapView>

</RelativeLayout>